[backend] Clean